# asgard

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  JETSON_SETUP.md  LICENSE  README.md  index.html  package-lock.json  package.json  prettify.bash  pyproject.toml  requirements.txt  script.js  style.css
app/: app.py  server.py
app/static/: script.js  style.css
app/templates/: aboutContent.md  index.html  reports.html  signup.html  status.html
backend/: app.py
backend/flaskr/: index.html
clients/: setupNFS_client.bash
frontend/: index.html  script.js  style.css
headNodeConfig/: Steps To Install NFS.docx  setup-avahi.bash  setup-nfs.bash
nodeConfig/: nfsInstall_node.bash  setup-avahi.bash  setup-nfs-client.bash  setupNFS_client.bash
server/: README.md  netplan-example.yaml  setupDNSMasq.bash  setupNFS.bash
serverConfig/: README.md  setup-nfs.bash  setupAvahi.bash  setupDNSMasq.bash  setupNFS.bash
